<resources>
    <string name="app_name">EV Charging App</string>
    <string name="title_map">Map</string>
    <string name="title_profile">Profile</string>
    <string name="title_activity">EV Charging App</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyAW9q84AWKQkrxjRS1i97ImeuOAJ7ynPWY</string>
    <string name="charger_levels">Charger Levels:</string>
    <string name="connector_types">Connector Types:</string>
    <string name="back">Back</string>
    <string name="level_1">Level 1</string>
    <string name="level_2">Level 2</string>
    <string name="fast_level_3">Fast (Level 3)</string>
    <string name="ev_plug_j1772">EV Plug (J1772)</string>
    <string name="css_j1772combo">CSS (J1772COMBO)</string>
    <string name="tesla">Tesla</string>
    <string name="chademo">CHAdeMO</string>
    <string name="nema_14_50">NEMA 14-50</string>
    <string name="nema_5_15">NEMA 5-15</string>
    <string name="nema_5_20">NEMA 5-20</string>
    <string name="map">Map</string>
    <string name="profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="general_preferences">General Preferences:</string>
    <string name="private_markers_visible">Private Markers Visible</string>
    <string name="inactive_markers_visible">Inactive Markers Visible</string>
</resources>